--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Akash Lodha's Profile
+title: Gulsah Cakir's Profile
 description: [This site showcases all of my work]
